# Team-Alpha

./: .gitignore  Assignment.md  CMakeLists.txt  README.md  main.cpp
include/: Blob.hpp  BranchMap.hpp  Commit.hpp  Diff.hpp  ErrorHandling.hpp  Logger.hpp  RepositoryManager.hpp  StagingArea.hpp
test/unit/: test.sh
